[package]
name = "pashmina"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
futures = "0.3"
wgpu = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
flume = "0.11.0"

[dev-dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
